# titanic-production-graded-ai-project-V1

./: .gitignore  mlflow.db  pyproject.toml  requirements.txt  setup.cfg
artifacts/: test_model.joblib
artifacts/data_transformation/: X_test.npy  X_train.npy  preprocessor.joblib  test.npy  train.npy
artifacts/data_validation/: report.yaml
artifacts/model_trainer/: leaderboard.csv  metrics.json  model.joblib
configs/: config.yaml  schema.yaml
requirements/: base.txt  dev.txt  prod.txt
scripts/: bootstrap.py
src/: demo_configuration.py  demo_data_ingestion.py  demo_data_transformation.py  demo_data_validation.py  demo_exception.py  demo_logger.py  demo_model_factory.py  demo_training_engine.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/exception/: exception.py
src/logger/: logger.py
src/models/: model_factory.py  trainer.py
src/pipeline/: training_pipeline.py
src/titanic_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: common.py
tests/: test_bootstrap.py  test_common.py  test_config_entities.py  test_configuration.py  test_constants.py  test_data_ingestion.py  test_data_transformation.py  test_data_validation.py  test_exception.py  test_import.py  test_logger.py  test_logging_config.py  test_model_trainer.py  test_training_engine.py
titanic_production_ml.egg-info/: PKG-INFO  SOURCES.txt
